refactor: reduce the number of imports